Fixing leonis advantage on mobile

--- a/leonisWPTheme/style.css
+++ b/leonisWPTheme/style.css
@@ -450,8 +450,13 @@ margin: 0;
 .advantage-box:hover {
         box-shadow: 0 5px 20px rgba(0, 0, 0, 0.8);
         transform: translateY(-10px) scale(1.02);
-    }
+}
 
+@media screen and (orientation: portrait) {
+        .advantage-box {
+                width: 90%;
+        }
+}
 /* ----------- OUR SERVICES SECTION -----------*/
 
 .services-top-tag {
@@ -833,7 +838,7 @@ position: absolute; }
 
 @media(max-width: 1099px) {
         header nav a {
-                font-size: 1.3rem!important;
+                font-size: 1.2rem!important;
         }
 }
 
